# similar-ordinals

./: .gitignore  Makefile  README.md  api.py  average_hash_example.json  average_hash_fill_array.py  average_hash_json.py  categorize.py  common.py  compare_two.py  compute_features.py  config.py  db_files.py  db_ord_data.py  db_similarity_index.py  devpost_pitch.md  duplicates.py  find_avg_hash.py  find_similar.py  get_matches.py  get_matches_rust.py  mempool.py  rename.py  requirements.txt  rust_server.py  save_average_hashes.py  single_value.py  update_and_restart.sh  update_data.py  update_data_local.py  update_similarity_index.py
frontend/: index.css  index.html  index.js  main.js  results.css  results.html  results.js
rust_http_server/: Cargo.toml
rust_http_server/src/: main.rs
similar_pictures/: .gitignore  Cargo.toml
similar_pictures/src/: get_matches.rs  lib.rs  main.rs
