[package]
name = "similar_pictures"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[lib]
name = "similar_pictures"
crate-type = ["cdylib"]